<resources>
    <string name="string0000">%s is not installed</string>
    <string name="string0001">Navigate home</string>
    <string name="string0002">Navigate up</string>
    <string name="string0003">More options</string>
    <string name="string0004">Done</string>
    <string name="string0005">See all</string>
    <string name="string0006">Choose an app</string>
    <string name="string0007">OFF</string>
    <string name="string0008">ON</string>
    <string name="string0009">Alt+</string>
    <string name="string000a">Ctrl+</string>
    <string name="string000b">delete</string>
    <string name="string000c">enter</string>
    <string name="string000d">Function+</string>
    <string name="string000e">Meta+</string>
    <string name="string000f">Shift+</string>
    <string name="string0010">space</string>
    <string name="string0011">Sym+</string>
    <string name="string0012">Menu+</string>
    <string name="string0013">Search…</string>
    <string name="string0014">Clear query</string>
    <string name="string0015">Search query</string>
    <string name="string0016">Search</string>
    <string name="string0017">Submit query</string>
    <string name="string0018">Voice search</string>
    <string name="string0019">Share with</string>
    <string name="string001a">Share with %s</string>
    <string name="string001b">Collapse</string>
    <string name="string001c">About %s</string>
    <string name="string001d">Settings</string>
    <string name="string001e">Add cover</string>
    <string name="string001f">Add Files</string>
    <string name="string0020">Advanced</string>
    <string name="string0022">Alarm</string>
    <string name="string0023">Album</string>
    <string name="string0024">All</string>
    <string name="string0025">Allow</string>
    <string name="string0026">Tap \"Allow\" to grant permissions for &lt;b>all videos&lt;/b></string>
    <string name="string0027">androidx.startup</string>
    <string name="string0028">Annual Membership</string>
    <string name="string0029">Video to MP3 Converter</string>
    <string name="string002a">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="string002b">Artist</string>
    <string name="string002c">Ascending</string>
    <string name="string002d">Attention</string>
    <string name="string002e">Audio</string>
    <string name="string002f">Audio Converter</string>
    <string name="string0030">Audio Cutter</string>
    <string name="string0031">Audio Format</string>
    <string name="string0032">Saving at 0.5x speed may reduce audio quality</string>
    <string name="string0033">Are you sure to remove this audio file?</string>
    <string name="string0034">Audio Merger</string>
    <string name="string0035">%s play error</string>
    <string name="string0036">Audio Saved</string>
    <string name="string0037">Audio Speed</string>
    <string name="string0038">Auto</string>
    <string name="string0039">back</string>
    <string name="string003a">Background convert</string>
    <string name="string003b">Change the audio speed of 6+ files at once</string>
    <string name="string003c">Bitrate</string>
    <string name="string003d">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="string003e">Expand halfway</string>
    <string name="string003f">Answer</string>
    <string name="string0040">Video</string>
    <string name="string0041">Decline</string>
    <string name="string0042">Hang Up</string>
    <string name="string0043">Incoming call</string>
    <string name="string0044">Ongoing call</string>
    <string name="string0045">Screening an incoming call</string>
    <string name="string0046">Cancel</string>
    <string name="string0047">Do you want to cancel the conversion?</string>
    <string name="string0048">Warning</string>
    <string name="string0049">Change</string>
    <string name="string004a">Select Language</string>
    <string name="string004b">Change audio cover for free</string>
    <string name="string004c">Channel</string>
    <string name="string004d">Characters entered %1$d of %2$d</string>
    <string name="string004e">Character limit exceeded %1$d of %2$d</string>
    <string name="string004f">%1$d/%2$d</string>
    <string name="string0050">Chip text</string>
    <string name="string0051">Clear text</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">d7a0e5de3bf949ea8c38b4e6e881c115</string>
    <string name="string0053">Enable</string>
    <string name="string0054">"%1$s won't work unless you enable Google Play services."</string>
    <string name="string0055">Enable Google Play services</string>
    <string name="string0056">Install</string>
    <string name="string0057">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="string0058">Get Google Play services</string>
    <string name="string0059">Google Play services availability</string>
    <string name="string005a">Google Play services error</string>
    <string name="string005b">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="string005c">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="string005d">Update</string>
    <string name="string005e">"%1$s won't run unless you update Google Play services."</string>
    <string name="string005f">Update Google Play services</string>
    <string name="string0060">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="string0061">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="string0062">Open on phone</string>
    <string name="string0063">Sign in</string>
    <string name="string0064">Sign in with Google</string>
    <string name="string0065">Compress</string>
    <string name="string0066">Confirm</string>
    <string name="string0067">Contacts</string>
    <string name="string0068">Continue</string>
    <string name="string0069">Conversion format</string>
    <string name="string006a">Select format with faster conversion speed. (Recommend)</string>
    <string name="string006b">Convert</string>
    <string name="string006c">Video format is not supported.</string>
    <string name="string006d">Storage is almost full</string>
    <string name="string006e">You have to clean some space before converting.</string>
    <string name="string006f">Failed to convert</string>
    <string name="string0070">Convert format</string>
    <string name="string0071">Converting…</string>
    <string name="string0072">Converting Mode</string>
    <string name="string0073">Convert progress : %d%%</string>
    <string name="string0074">Convert Successfully</string>
    <string name="string0075">Convert to audio</string>
    <string name="string0076">%d files converted</string>
    <string name="string0077">Converting…</string>
    <string name="string0078">Converting in the background</string>
    <string name="string0079">Link copied to clipboard</string>
    <string name="string007a">Cover</string>
    <string name="string007b">Cancelling, required permissions are not granted</string>
    <string name="string007c" />
    <string name="string007d">Crop</string>
    <string name="string007e">Flip</string>
    <string name="string007f">Flip horizontally</string>
    <string name="string0080">Flip vertically</string>
    <string name="string0081">Rotate counter clockwise</string>
    <string name="string0082">Rotate</string>
    <string name="string0083">Custom</string>
    <string name="string0084">Cut</string>
    <string name="string0085">Date</string>
    <string name="string0086">Default Output Folder</string>
    <string name="default_web_client_id">985452931713-s92bemnjhdubpnfft3mk484eabe8gklh.apps.googleusercontent.com</string>
    <string name="string0088">Delete</string>
    <string name="string0089">Delete failed.</string>
    <string name="string008a">"For the Android limitation, we can't delete files in SD card. You need to delete them manually in gallery."</string>
    <string name="string008b">File will be deleted permanently.</string>
    <string name="string008c">Delete file from device?</string>
    <string name="string008d">Deleted successfully.</string>
    <string name="string008e">Descending</string>
    <string name="string008f">Directories</string>
    <string name="string0090">Please discard them to continue.</string>
    <string name="string0091">Discover the magic of conversion — effortlessly extract audio from your videos!</string>
    <string name="string0092">…</string>
    <string name="string0093">Drag to cut.</string>
    <string name="string0094">Duration</string>
    <string name="string0095">Edit</string>
    <string name="string0096">The feature is not supported when selecting %s bitrate, please switch to another bitrate.</string>
    <string name="string0097">Edit Tag</string>
    <string name="string0098">No song found.</string>
    <string name="string0099">No video found.</string>
    <string name="string009a">End</string>
    <string name="string009b">Failed to open this file.</string>
    <string name="string009c">Something wrong with this file</string>
    <string name="string009d">Error</string>
    <string name="string009e">No sound in this video.</string>
    <string name="string009f">Exit</string>
    <string name="string00a0">Exit before saving?</string>
    <string name="string00a1">Do you want to discard your edits?</string>
    <string name="string00a2">Explore more</string>
    <string name="string00a3">Show dropdown menu</string>
    <string name="string00a4">"Due to Android restriction, when SD card is chosen as the save location:

Files will be lost if our app is uninstalled.

Continue saving files to SD card?"</string>
    <string name="string00a5">Extract audio</string>
    <string name="string00a6">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="string00a7">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="string00a8">Meet %s users around the world</string>
    <string name="string00a9">Fade</string>
    <string name="string00aa">Fade in</string>
    <string name="string00d3">File</string>
    <string name="string00d4">File Count</string>
    <string name="string00dc">The following files are corrupted.</string>
    <string name="string00dd">Format</string>
    <string name="string00de">Format Converter</string>
    <string name="string00f7">Info</string>
    <string name="string0100">Length</string>
    <string name="string0101">Cancel</string>
    <string name="string0103">Rate on Google play</string>
    <string name="string010e">"Other users will benefit from your review. 

Please leave your review on Google Play."</string>
    <string name="string0117">sans-serif-medium</string>
    <string name="string0118">sans-serif</string>
    <string name="string011f">Location</string>
    <string name="string0125">Select AM or PM</string>
    <string name="string0131">AM</string>
    <string name="string0135">PM</string>
    <string name="string0171">Name</string>
    <string name="string0191">OK</string>
    <string name="string0197">Open with</string>
    <string name="string01b1">No videos</string>
    <string name="string01d5">Rename</string>
    <string name="string01f8">Select</string>
    <string name="string0213">Share</string>
    <string name="string0219">Show all files</string>
    <string name="string021b">Size</string>
    <string name="string021f">Sort by:</string>
    <string name="string0224">From new to old</string>
    <string name="string0225">From old to new</string>
    <string name="string0237">Thank you for your feedback</string>
    <string name="string0238">Sorry for the inconvenience caused. We will fix this issue in a future release.</string>
</resources>