<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:padding="24.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="18.0sp"
        android:textColor="@color/color005f"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string002d"
        android:drawablePadding="12.0dip"
        android:drawableStart="@drawable/drawable01b8"
        android:fontFamily="@string/string0117" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14.0sp"
        android:textColor="@color/color005f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/string00dc" />

    <com.inshot.videotomp3.view.MaxHeightRecyclerView
        android:id="@id/id030b"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.0dip" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14.0sp"
        android:textColor="@color/color005f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/string0090" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14.0sp"
        android:textColor="@color/color00c8"
        android:gravity="center"
        android:id="@id/id0447"
        android:background="@drawable/drawable009a"
        android:paddingTop="10.0dip"
        android:paddingBottom="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24.0dip"
        android:text="@string/string0191"
        android:fontFamily="@string/string0117"
        android:layout_marginStart="26.0dip"
        android:layout_marginEnd="26.0dip" />
</LinearLayout>