<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:background="@color/color00c8"
    android:paddingTop="22.0dip"
    android:paddingBottom="8.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="20.0sp"
        android:textColor="@color/color00ba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string021f"
        android:maxLines="1"
        android:fontFamily="sans-serif-medium"
        android:layout_marginStart="24.0dip" />

    <RadioGroup
        android:orientation="vertical"
        android:id="@id/id0178"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:layout_marginStart="24.0dip"
        android:layout_marginEnd="8.0dip">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color0066"
            android:id="@id/id00f6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/string0085"
            android:fontFamily="@string/string0118"
            android:paddingStart="12.0dip" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="14.0sp"
            android:textColor="@color/color005f"
            android:id="@id/id02a6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:checked="false"
            android:text="@string/string0171"
            android:fontFamily="@string/string0118"
            android:paddingStart="12.0dip" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="14.0sp"
            android:textColor="@color/color005f"
            android:id="@id/id0117"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:checked="false"
            android:text="@string/string0094"
            android:fontFamily="@string/string0118"
            android:paddingStart="12.0dip" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="14.0sp"
            android:textColor="@color/color005f"
            android:id="@id/id0147"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:checked="false"
            android:text="@string/string00d4"
            android:fontFamily="@string/string0118"
            android:paddingStart="12.0dip" />
    </RadioGroup>

    <View
        android:background="@color/color003e"
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:layout_marginTop="24.0dip"
        android:layout_marginBottom="24.0dip"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip" />

    <RadioGroup
        android:orientation="vertical"
        android:id="@id/id0179"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24.0dip"
        android:layout_marginEnd="8.0dip">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="14.0sp"
            android:textStyle="bold"
            android:textColor="@color/color0066"
            android:id="@id/id00ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/string0224"
            android:fontFamily="@string/string0118"
            android:paddingStart="12.0dip" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="14.0sp"
            android:textColor="@color/color005f"
            android:id="@id/id0073"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:checked="false"
            android:text="@string/string0225"
            android:fontFamily="@string/string0118"
            android:paddingStart="12.0dip" />
    </RadioGroup>

    <LinearLayout
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24.0dip"
        android:layout_marginEnd="8.0dip">

        <TextView
            android:textSize="14.0sp"
            android:textColor="@color/color0066"
            android:gravity="center"
            android:id="@id/id00b1"
            android:background="@drawable/drawable007f"
            android:paddingLeft="8.0dip"
            android:paddingTop="10.0dip"
            android:paddingRight="8.0dip"
            android:paddingBottom="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="64.0dip"
            android:text="@string/string0046"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium"
            android:layout_marginEnd="10.0dip" />

        <TextView
            android:textSize="14.0sp"
            android:textColor="@color/color0066"
            android:gravity="center"
            android:id="@id/id02bc"
            android:background="@drawable/drawable007f"
            android:paddingLeft="8.0dip"
            android:paddingTop="10.0dip"
            android:paddingRight="8.0dip"
            android:paddingBottom="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="64.0dip"
            android:text="@string/string0191"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium" />
    </LinearLayout>
</LinearLayout>