<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical"
    android:background="@drawable/drawable00f6"
    android:paddingTop="24.0dip"
    android:paddingBottom="24.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16.0dip"
    android:paddingEnd="16.0dip"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drawable019e" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="16.0sp"
        android:textColor="@color/color005f"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16.0dip"
        android:text="@string/string0237"
        android:fontFamily="@string/string0117" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14.0sp"
        android:textColor="@color/color005f"
        android:layout_gravity="center_horizontal"
        android:id="@id/id042f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.0dip"
        android:text="@string/string0238"
        android:lineSpacingMultiplier="1.4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="18.0sp"
        android:textColor="@color/color00c8"
        android:gravity="center"
        android:id="@id/id0447"
        android:background="@drawable/drawable00e3"
        android:paddingTop="10.0dip"
        android:paddingBottom="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24.0dip"
        android:text="@string/string0191"
        android:textAllCaps="true"
        android:fontFamily="@string/string0117" />
</androidx.appcompat.widget.LinearLayoutCompat>